--- a/styles/global.css
+++ b/styles/global.css
@@ -31,6 +31,10 @@ body{
     background-color: var(--bg-color);   
 }
 
+img{
+    max-width: 100%;
+}
+
 a{
     text-decoration: none;
     color: inherit;
@@ -50,11 +54,6 @@ h1,h2,h3{
     margin-inline: auto;
 }
 
-.grid{
-    display: grid;
-}
-
-.grid-flow-col{
-    grid-auto-flow: column;
-    
+main{
+    margin-top: 40px;
 }
