--- a/styles/sections.css
+++ b/styles/sections.css
@@ -1,7 +1,41 @@
 #featured{
     img{
-        width:100%;
-        object-fit:cover;
-        border-radius: 4px;
+        height: 100%;
+        object-fit: cover;
+    }
+   
+}
+.card{
+    position: relative;
+    overflow: hidden;
+    border-radius: 4px;
+  &::before{
+    content:"";
+    position: absolute;
+    inset: 0;
+    top: 50%;
+    background: linear-gradient(
+        180deg,
+        transparent 0%,
+        #020617 100%
+    );
+
+    }
+
+    figcaption{
+        position: absolute;
+        bottom: 0;
+
+
+        padding: 24px;
+
+        &:has(.text-lg){
+            padding: 12px;
+        }
+
+
+        h2{
+            margin-top: 8px;
+        }
     }
 }
