--- a/styles/global.css
+++ b/styles/global.css
@@ -5,7 +5,7 @@
 }
 
 :root{
-     /*Produro*/
+     /*Produto*/
     --brand-color-light:#60A5FA;
     --brand-color-dark:#1D4ED8;
      /*Base*/
@@ -55,8 +55,16 @@ h1,h2,h3{
 }
 
 main{
-    margin-top: 40px;
-    gap: 80px;
+    margin-block: 40px;
+    row-gap: 80px;
+    column-gap: 32px;
+
+    grid-template-columns: 2fr 1.5fr;
+    grid-template-areas: 
+    "featured featured"
+    "weekly weekly"
+    "imagens-destaque aside";
+    
 }
 
 
